--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@types/js-yaml": "^4.0.5",
     "axios": "^1.3.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
+    "path-to-regexp": "^6.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
