--- a/.mockapi.yml
+++ b/.mockapi.yml
@@ -9,7 +9,7 @@ dbFile: .mockapi.yml # Default to db.json
 dbDataPath: /data # Default to /
 
 # Config a route prefix.
-apiRoutePrefix: /api
+apiRoutePrefix: /
 
 
 # The methods to allow.
@@ -32,4 +32,4 @@ routes:
     - path: /:collection/:id/delete
   # The get filter.
   get:
-    - /* # default to * (accept get on every route.)
+    - /(.*) # default to * (accept get on every route.)
