--- a/.mockapi.yml
+++ b/.mockapi.yml
@@ -18,18 +18,18 @@ apiRoutePrefix: /
 routes:
   # The post filter. if defined, post request on every path other 
   # than the provided match should return 404 ( Route not found )
-  post:
-    - path: /pay
-      scheduleNotification:
-        followProp: notificationUrl
-        timeoutInSecond: 300 # Default to 60s. Maximum time out is 5min ( 5 * 60 s )
-        notificationMethod: POST # Default to GET
-        postDataPath: /notificationData # The db path of the notification data. require when 'notificationMethod' is set to POST.
-      bodyFields:
-        notificationUrl: true
-      restrictedBody: true
-    - path: /:collection/create
-    - path: /:collection/:id/delete
+  # post:
+  #   - path: /pay
+  #     scheduleNotification:
+  #       followProp: notificationUrl
+  #       timeoutInSecond: 300 # Default to 60s. Maximum time out is 5min ( 5 * 60 s )
+  #       notificationMethod: POST # Default to GET
+  #       postDataPath: /notificationData # The db path of the notification data. require when 'notificationMethod' is set to POST.
+  #     bodyFields:
+  #       notificationUrl: true
+  #     restrictedBody: true
+  #   - path: /:collection/create
+  #   - path: /:collection/:id/delete
   # The get filter.
   get:
     - /(.*) # default to * (accept get on every route.)
